// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogForm /> Should render correctly 1`] = `
<div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="title_FORM_ID"
    >
      Title
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Title"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="title_FORM_ID"
        name="Title"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="tags_FORM_ID"
    >
      Tags
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Tags"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="tags_FORM_ID"
        name="Tags"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="blogImage_FORM_ID"
    >
      Blog image
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Blog image"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="blogImage_FORM_ID"
        name="Blog image"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="publishedTimestamp_FORM_ID"
    >
      Published timestamp
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Published timestamp"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="publishedTimestamp_FORM_ID"
        name="Published timestamp"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="blogCardDate_FORM_ID"
    >
      Blog card date override
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Blog card date override"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="blogCardDate_FORM_ID"
        name="Blog card date override"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="checkbox forms__component"
      id="light_FORM_ID"
    >
      <div
        class="checkbox__input-wrapper"
      >
        <input
          aria-invalid="false"
          aria-label="Light"
          class="checkbox__input"
          name="Light"
          type="checkbox"
        />
        <svg
          class="icon checkbox__check"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="checkbox__label"
      >
        Light
         
      </span>
    </label>
    <br />
    <label
      class="checkbox forms__component"
      id="published_FORM_ID"
    >
      <div
        class="checkbox__input-wrapper"
      >
        <input
          aria-invalid="false"
          aria-label="Published"
          class="checkbox__input"
          name="Published"
          type="checkbox"
        />
        <svg
          class="icon checkbox__check"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="checkbox__label"
      >
        Published
         
      </span>
    </label>
    <br />
    <label
      class="checkbox forms__component"
      id="showInBlogsList_FORM_ID"
    >
      <div
        class="checkbox__input-wrapper"
      >
        <input
          aria-invalid="false"
          aria-label="Show in blogs list"
          class="checkbox__input"
          name="Show in blogs list"
          type="checkbox"
        />
        <svg
          class="icon checkbox__check"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="checkbox__label"
      >
        Show in blogs list
         
      </span>
    </label>
    <br />
    <label
      class="checkbox forms__component"
      id="showInTravelBlogsList_FORM_ID"
    >
      <div
        class="checkbox__input-wrapper"
      >
        <input
          aria-invalid="false"
          aria-label="Show in travel blogs list"
          class="checkbox__input"
          name="Show in travel blogs list"
          type="checkbox"
        />
        <svg
          class="icon checkbox__check"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="checkbox__label"
      >
        Show in travel blogs list
         
      </span>
    </label>
    <br />
    <label
      class="forms__component forms__component__label"
      for="blogImageBorderColor_FORM_ID"
    >
      Blog image border color
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Blog image border color"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="blogImageBorderColor_FORM_ID"
        name="Blog image border color"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="content_FORM_ID"
    >
      Content
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Content"
    >
      <textarea
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="content_FORM_ID"
        name="Content"
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large forms__component forms__component__button"
      type="button"
    >
      <span
        class="button__child"
      />
    </button>
  </div>
</div>
`;

exports[`<BlogForm /> Should render correctly with no blog id 1`] = `
<div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="requestedId_FORM_ID"
    >
      Requested ID
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Requested ID"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="requestedId_FORM_ID"
        name="Requested ID"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="title_FORM_ID"
    >
      Title
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Title"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="title_FORM_ID"
        name="Title"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="tags_FORM_ID"
    >
      Tags
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Tags"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="tags_FORM_ID"
        name="Tags"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="blogImage_FORM_ID"
    >
      Blog image
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Blog image"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="blogImage_FORM_ID"
        name="Blog image"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="publishedTimestamp_FORM_ID"
    >
      Published timestamp
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Published timestamp"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="publishedTimestamp_FORM_ID"
        name="Published timestamp"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="blogCardDate_FORM_ID"
    >
      Blog card date override
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Blog card date override"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="blogCardDate_FORM_ID"
        name="Blog card date override"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="checkbox forms__component"
      id="light_FORM_ID"
    >
      <div
        class="checkbox__input-wrapper"
      >
        <input
          aria-invalid="false"
          aria-label="Light"
          class="checkbox__input"
          name="Light"
          type="checkbox"
        />
        <svg
          class="icon checkbox__check"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="checkbox__label"
      >
        Light
         
      </span>
    </label>
    <br />
    <label
      class="checkbox forms__component"
      id="published_FORM_ID"
    >
      <div
        class="checkbox__input-wrapper"
      >
        <input
          aria-invalid="false"
          aria-label="Published"
          class="checkbox__input"
          name="Published"
          type="checkbox"
        />
        <svg
          class="icon checkbox__check"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="checkbox__label"
      >
        Published
         
      </span>
    </label>
    <br />
    <label
      class="checkbox forms__component"
      id="showInBlogsList_FORM_ID"
    >
      <div
        class="checkbox__input-wrapper"
      >
        <input
          aria-invalid="false"
          aria-label="Show in blogs list"
          class="checkbox__input"
          name="Show in blogs list"
          type="checkbox"
        />
        <svg
          class="icon checkbox__check"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="checkbox__label"
      >
        Show in blogs list
         
      </span>
    </label>
    <br />
    <label
      class="checkbox forms__component"
      id="showInTravelBlogsList_FORM_ID"
    >
      <div
        class="checkbox__input-wrapper"
      >
        <input
          aria-invalid="false"
          aria-label="Show in travel blogs list"
          class="checkbox__input"
          name="Show in travel blogs list"
          type="checkbox"
        />
        <svg
          class="icon checkbox__check"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <span
        aria-hidden="true"
        class="checkbox__label"
      >
        Show in travel blogs list
         
      </span>
    </label>
    <br />
    <label
      class="forms__component forms__component__label"
      for="blogImageBorderColor_FORM_ID"
    >
      Blog image border color
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Blog image border color"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="blogImageBorderColor_FORM_ID"
        name="Blog image border color"
        value=""
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="content_FORM_ID"
    >
      Content
    </label>
    <div
      class="input__outer forms__component forms__component__text-box"
      placeholder="Content"
    >
      <textarea
        aria-disabled="false"
        aria-invalid="false"
        class="input__inner"
        id="content_FORM_ID"
        name="Content"
      />
      <svg
        class="icon input__icon input__icon--valid"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large forms__component forms__component__button"
      type="button"
    >
      <span
        class="button__child"
      />
    </button>
  </div>
</div>
`;
